--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
         <div class="col-xs-12">
           <div class="hero-full-wrapper">
             <div class="text-content">
-              <h1>Hello, I'm<br>
+              <h1>Hey, I'm<br>
                 <span id="typed-strings">
                   <span>Abdullah Al Tahir</span>
-                  <span>a Hacker and Security Researcher</span>
+                  <span>a Pentester</span>
                   <span>Working as a Bug Hunter</span>
                 </span>
                 <span id="typed"></span>
